[package]
name = "bma-jrpc"
version = "0.1.0"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/alttch/bma-jrpc"
description = "JSON RPC client for Rust"
readme = "README.md"
keywords = ["json", "rpc", "client", "http"]

[dependencies]
bma-jrpc-derive = "0.1.1"
futures-lite = "1.12.0"
http = "0.2.9"
isahc = "1.7.2"
rmp-serde = { version = "1.1.1", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[features]
msgpack = ["rmp-serde"]
full = ["msgpack"]

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = ["full"]

[lib]
name ="bma_jrpc"
path = "src/lib.rs"
